chore: add ci config